# libmisc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: auto_str  char  format  io  option  prelude  result  str  str_io  types
include/internal/: check_error
src/: char.c  format.c  io.c  str.c  str_io.c
tests/: CMakeLists.txt
tests/src/: str_test.c
